--- a/feature-account-impl/src/main/res/drawable/bg_pincode_number_button.xml
+++ b/feature-account-impl/src/main/res/drawable/bg_pincode_number_button.xml
@@ -12,7 +12,7 @@
         android:id="@android:id/mask"
         android:gravity="center">
         <shape android:shape="oval">
-            <solid android:color="@color/cell_background_pressed"/>
+            <solid android:color="#fff"/>
         </shape>
     </item>
 </ripple>
