--- a/feature-governance-impl/src/main/res/layout/view_chip.xml
+++ b/feature-governance-impl/src/main/res/layout/view_chip.xml
@@ -18,7 +18,7 @@
         android:layout_marginVertical="3dp"
         android:layout_marginEnd="6dp"
         android:gravity="center_vertical"
-        app:tint="@color/icon_secondary"
+        app:tint="@color/chip_icon"
         tools:src="@drawable/ic_info_16" />
 
     <TextView
