--- a/common/src/main/res/drawable/secondary_chip_background.xml
+++ b/common/src/main/res/drawable/secondary_chip_background.xml
@@ -5,6 +5,7 @@
             <item android:id="@android:id/mask" android:gravity="center">
                 <shape android:shape="rectangle">
                     <corners android:radius="10dp" />
+                    <solid android:color="#fff"/>
                 </shape>
             </item>
 
