--- a/common/src/main/res/drawable/bg_primary_list_item.xml
+++ b/common/src/main/res/drawable/bg_primary_list_item.xml
@@ -5,7 +5,7 @@
         android:id="@android:id/mask"
         android:gravity="center">
         <shape android:shape="rectangle">
-            <solid android:color="@color/cell_background_pressed"/>
+            <solid android:color="#fff"/>
         </shape>
     </item>
 </ripple>
