--- a/common/src/main/res/layout/view_nova_connect.xml
+++ b/common/src/main/res/layout/view_nova_connect.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         style="@style/Widget.Nova.Icon.Big"
-        android:src="@drawable/ic_nova_wallet" />
+        android:src="@drawable/ic_nova_logo" />
 
     <ImageView
         android:layout_width="wrap_content"
