--- a/feature-dapp-impl/src/main/res/layout/bottom_sheet_confirm_authorize.xml
+++ b/feature-dapp-impl/src/main/res/layout/bottom_sheet_confirm_authorize.xml
@@ -11,7 +11,7 @@
         style="@style/Widget.Nova.Icon.Big"
         android:layout_marginTop="20dp"
         android:padding="16dp"
-        android:src="@drawable/ic_nova_wallet"
+        android:src="@drawable/ic_nova_logo"
         app:layout_constraintEnd_toStartOf="@+id/confirmAuthorizeNovaArrow"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
