--- a/app/src/main/res/navigation/manage_tokens_graph.xml
+++ b/app/src/main/res/navigation/manage_tokens_graph.xml
@@ -14,6 +14,10 @@
             app:destination="@id/manageChainTokensFragment" />
 
         <action
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
             android:id="@+id/action_manageTokensFragment_to_addTokenSelectChainFragment"
             app:destination="@id/addTokenSelectChainFragment" />
     </fragment>
@@ -26,10 +30,6 @@
     <fragment
         android:id="@+id/addTokenSelectChainFragment"
         android:name="io.novafoundation.nova.feature_assets.presentation.tokens.add.selectChain.AddTokenSelectChainFragment"
-        android:label="AddTokenSelectChainFragment"
-        app:enterAnim="@anim/fragment_open_enter"
-        app:exitAnim="@anim/fragment_open_exit"
-        app:popEnterAnim="@anim/fragment_close_enter"
-        app:popExitAnim="@anim/fragment_close_exit" />
+        android:label="AddTokenSelectChainFragment" />
 
 </navigation>
