ktlin format and banners fix

--- a/feature-staking-impl/src/main/res/layout/view_user_rewards.xml
+++ b/feature-staking-impl/src/main/res/layout/view_user_rewards.xml
@@ -96,7 +96,7 @@
                 android:id="@+id/userRewardsContentGroup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
+                android:visibility="invisible"
                 app:constraint_referenced_ids="userRewardsFiatAmount, userRewardsTokenAmount"
                 tools:visibility="visible" />
 
