--- a/feature-vote/src/main/res/layout/fragment_vote.xml
+++ b/feature-vote/src/main/res/layout/fragment_vote.xml
@@ -3,7 +3,8 @@
     android:id="@+id/voteContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/drawable_background_image">
 
     <LinearLayout
         android:layout_width="match_parent"
