--- a/feature-assets/src/main/res/layout/fragment_balance_list.xml
+++ b/feature-assets/src/main/res/layout/fragment_balance_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/walletContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="@drawable/drawable_background_image">
+    android:background="@drawable/drawable_background_image">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/balanceListAssets"
@@ -17,7 +17,7 @@
         android:overScrollMode="never"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
-        android:paddingBottom="16dp"
+        android:paddingBottom="64dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
