--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -57,6 +57,10 @@
         <attr name="textVisible" format="boolean" />
     </declare-styleable>
 
+    <declare-styleable name="ActionInputField">
+        <attr name="android:hint" format="string" />
+    </declare-styleable>
+
     <declare-styleable name="InputField">
         <attr name="android:inputType" />
         <attr name="android:text" />
