--- a/feature-assets/src/main/res/layout/item_sheet_buy_provider.xml
+++ b/feature-assets/src/main/res/layout/item_sheet_buy_provider.xml
@@ -19,8 +19,8 @@
 
         <ImageView
             android:id="@+id/itemSheetBuyProviderImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             tools:src="@drawable/ic_people_outline"
             app:tint="@color/icon_primary"
             tools:tint="@color/text_primary" />
