--- a/app/src/main/res/navigation/manage_tokens_graph.xml
+++ b/app/src/main/res/navigation/manage_tokens_graph.xml
@@ -30,6 +30,30 @@
     <fragment
         android:id="@+id/addTokenSelectChainFragment"
         android:name="io.novafoundation.nova.feature_assets.presentation.tokens.add.selectChain.AddTokenSelectChainFragment"
-        android:label="AddTokenSelectChainFragment" />
+        android:label="AddTokenSelectChainFragment">
+
+        <action
+            android:id="@+id/action_addTokenSelectChainFragment_to_addTokenEnterInfoFragment"
+            app:destination="@id/addTokenEnterInfoFragment"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/addTokenEnterInfoFragment"
+        android:name="io.novafoundation.nova.feature_assets.presentation.tokens.add.enterInfo.AddTokenEnterInfoFragment"
+        android:label="AddTokenEnterInfoFragment">
+
+        <action
+            android:id="@+id/finish_add_token_flow"
+            app:enterAnim="@anim/fragment_close_enter"
+            app:exitAnim="@anim/fragment_close_exit"
+            app:popEnterAnim="@anim/fragment_open_enter"
+            app:popExitAnim="@anim/fragment_open_exit"
+            app:popUpTo="@id/mainFragment" />
+
+    </fragment>
 
 </navigation>
