--- a/feature-assets/src/main/res/layout/fragment_add_token_enter_info.xml
+++ b/feature-assets/src/main/res/layout/fragment_add_token_enter_info.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:background="@color/black">
+    tools:background="@color/secondary_screen_background">
 
     <io.novafoundation.nova.common.view.Toolbar
         android:id="@+id/addTokenEnterInfoToolbar"
@@ -36,6 +36,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="@string/assets_add_token_enter_info_title"
+                android:textColor="@color/text_primary"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0"
@@ -49,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/assets_add_token_enter_info_address_label"
-                android:textColor="@color/white_48"
+                android:textColor="@color/text_secondary"
                 app:layout_constraintStart_toStartOf="@+id/addTokenEnterInfoTitle"
                 app:layout_constraintTop_toBottomOf="@+id/addTokenEnterInfoTitle" />
 
@@ -73,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/assets_add_token_enter_info_symbol_label"
-                android:textColor="@color/white_48"
+                android:textColor="@color/text_secondary"
                 app:layout_constraintStart_toStartOf="@+id/addTokenEnterInfoSymbolInput"
                 app:layout_constraintTop_toBottomOf="@+id/addTokenEnterInfoAddressInput" />
 
@@ -98,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/assets_add_token_enter_info_decimals_label"
-                android:textColor="@color/white_48"
+                android:textColor="@color/text_secondary"
                 app:layout_constraintStart_toStartOf="@+id/addTokenEnterInfoDecimalsInput"
                 app:layout_constraintTop_toBottomOf="@+id/addTokenEnterInfoAddressInput" />
 
@@ -125,7 +126,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="@string/assets_add_token_enter_info_price_label"
-                android:textColor="@color/white_48"
+                android:textColor="@color/text_secondary"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
