--- a/feature-assets/src/main/res/layout/fragment_add_token_select_chain.xml
+++ b/feature-assets/src/main/res/layout/fragment_add_token_select_chain.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/secondary_screen_background"
     android:orientation="vertical">
 
     <io.novafoundation.nova.common.view.Toolbar
@@ -20,6 +20,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:textColor="@color/text_primary"
         android:text="@string/assets_add_token_select_chain_title" />
 
     <androidx.recyclerview.widget.RecyclerView
