--- a/feature-assets/src/main/res/layout/fragment_manage_chain_tokens.xml
+++ b/feature-assets/src/main/res/layout/fragment_manage_chain_tokens.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:background="@color/black">
+    tools:background="@color/secondary_screen_background">
 
     <View
         android:id="@+id/view"
@@ -20,7 +20,7 @@
 
         <ImageView
             android:id="@+id/manageChainTokenIcon"
-            style="@style/Widget.Nova.AssetIcon.Light"
+            style="@style/Widget.Nova.AssetIcon.OnColor"
             android:layout_marginStart="12dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view"
@@ -37,7 +37,7 @@
                 style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@color/text_primary"
                 tools:text="KSM" />
 
             <TextView
@@ -45,7 +45,7 @@
                 style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white_48"
+                android:textColor="@color/text_secondary"
                 tools:text="All networks" />
         </LinearLayout>
     </LinearLayout>
