--- a/feature-assets/src/main/res/values/styles.xml
+++ b/feature-assets/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <style name="Widget.Nova.NftPreview" parent="">
         <item name="android:layout_height">32dp</item>
         <item name="android:layout_width">32dp</item>
@@ -17,11 +18,11 @@
         <item name="android:layout_width">40dp</item>
     </style>
 
-    <style name="Widget.Nova.AssetIcon.Dark">
-        <item name="android:background">@drawable/bg_icon_round_black</item>
+    <style name="Widget.Nova.AssetIcon.Primary">
+        <item name="android:background">@drawable/bg_token_container</item>
     </style>
 
-    <style name="Widget.Nova.AssetIcon.Light">
-        <item name="android:background">@drawable/bg_icon_round_white_inverted</item>
+    <style name="Widget.Nova.AssetIcon.OnColor">
+        <item name="android:background">@drawable/bg_icon_container_on_color</item>
     </style>
 </resources>
