--- a/common/src/main/res/layout/view_insertable_input_field.xml
+++ b/common/src/main/res/layout/view_insertable_input_field.xml
@@ -38,7 +38,7 @@
         android:paddingRight="12dp"
         android:paddingBottom="8dp"
         android:text="@string/common_paste"
-        android:textColor="@color/button_text"
+        android:textColor="@color/button_text_accent"
         android:visibility="gone"
         tools:background="@color/container_border"
         tools:visibility="visible" />
