--- a/feature-assets/src/main/res/layout/item_manage_chain_token.xml
+++ b/feature-assets/src/main/res/layout/item_manage_chain_token.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    tools:background="@color/black">
+    tools:background="@color/bottom_sheet_background">
 
 
     <ImageView
@@ -15,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="14dp"
         android:layout_marginBottom="14dp"
-        tools:src="@color/accentBlue" />
+        tools:src="@color/android_system_accent" />
 
     <TextView
         style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
@@ -25,7 +25,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="8dp"
         android:layout_weight="1"
-        android:textColor="@color/white"
+        android:textColor="@color/text_primary"
         tools:text="Bifrost Kusama" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
