--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <!-- Colors not included in the design system -->
     <color name="address_icon_background">#eeeeee</color>
-    <color name="splash_background_color">#05081C</color>
     <color name="qr_code_background">#FFFFFF</color>
+
+    <!-- Splash background color -->
+    <color name="splash_background_color">#05081C</color>
 
     <!-- System -->
     <color name="android_system_accent">#1F78FF</color>
