--- a/feature-assets/src/main/res/layout/fragment_asset_filters.xml
+++ b/feature-assets/src/main/res/layout/fragment_asset_filters.xml
@@ -3,20 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:background="@color/secondary_screen_background">
+    android:paddingBottom="24dp"
+    tools:background="@color/bottom_sheet_background">
 
-    <io.novafoundation.nova.common.view.Toolbar
-        android:id="@+id/assetsFilterToolbar"
-        android:layout_width="match_parent"
+    <View
+        style="@style/Widget.Nova.Puller"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        style="@style/TextAppearance.NovaFoundation.SemiBold.Body"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:dividerVisible="false"
-        app:homeButtonIcon="@drawable/ic_close"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:titleText="@string/wallet_filters_title" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/assets_filter_title" />
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/assetsFilterSwitchZeroBalances"
@@ -24,21 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
-        android:textColor="@color/text_primary"
         android:layout_marginEnd="16dp"
-        android:text="@string/wallet_filter_hide_zero_balance" />
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-    <io.novafoundation.nova.common.view.PrimaryButton
-        android:id="@+id/assetsFilterApply"
-        style="@style/Widget.Nova.Button.Primary"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/common_apply" />
+        android:text="@string/wallet_filter_hide_zero_balance"
+        android:textColor="@color/text_primary" />
 
 </LinearLayout>
