Fix - decimals layout with long label

--- a/feature-assets/src/main/res/layout/fragment_add_token_enter_info.xml
+++ b/feature-assets/src/main/res/layout/fragment_add_token_enter_info.xml
@@ -100,6 +100,7 @@
                 android:layout_marginTop="16dp"
                 android:ellipsize="end"
                 android:singleLine="true"
+                app:layout_constraintHorizontal_bias="0"
                 android:text="@string/assets_add_token_enter_info_decimals_label"
                 android:textColor="@color/text_secondary"
                 app:layout_constrainedWidth="true"
