Manage tokens UI fixes

--- a/common/src/main/res/layout/view_search.xml
+++ b/common/src/main/res/layout/view_search.xml
@@ -9,6 +9,7 @@
     tools:parentTag="android.widget.LinearLayout">
 
     <ImageView
+        android:id="@+id/searchIcon"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_gravity="center_vertical"
