--- a/common/src/main/res/layout/view_account_info.xml
+++ b/common/src/main/res/layout/view_account_info.xml
@@ -70,5 +70,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/text_secondary" />
+        app:tint="@color/icon_secondary" />
 </merge>
