--- a/feature-governance-impl/src/main/res/layout/view_voting_threshold.xml
+++ b/feature-governance-impl/src/main/res/layout/view_voting_threshold.xml
@@ -23,37 +23,44 @@
         android:layout_width="match_parent"
         android:layout_height="25dp" />
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/percentageDetailsGroup"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/positivePercentage"
             style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_gravity="start"
+            android:layout_weight="1"
+            android:gravity="start|center_vertical"
             android:textColor="@color/text_secondary"
             tools:text="Aye: 80%" />
 
         <TextView
             android:id="@+id/thresholdPercentage"
             style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
             android:textColor="@color/text_secondary"
             tools:text="To pass: 50%" />
 
         <TextView
             android:id="@+id/negativePercentage"
             style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_gravity="end"
+            android:layout_weight="1"
+            android:gravity="end|center_vertical"
             android:textColor="@color/text_secondary"
             tools:text="Nay: 20%" />
-    </FrameLayout>
+    </LinearLayout>
 
 </merge>
