--- a/feature-account-impl/src/main/res/layout/fragment_wallet_list.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_wallet_list.xml
@@ -27,8 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="17dp"
-            android:textColor="@color/text_primary"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textColor="@color/text_primary" />
 
         <ImageView
             android:id="@+id/walletListBarAction"
@@ -39,23 +39,15 @@
             app:tint="@color/actions_color" />
     </LinearLayout>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/walletListScrollView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/walletListContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:clipToPadding="false"
         android:overScrollMode="never"
-        android:paddingBottom="16dp">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/walletListContent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="1"
-            tools:listitem="@layout/item_account" />
-
-    </androidx.core.widget.NestedScrollView>
+        android:paddingBottom="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="1"
+        tools:listitem="@layout/item_account" />
 </LinearLayout>
