--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -325,7 +325,6 @@
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
 
-
         <action
             android:id="@+id/action_mainFragment_to_assetSearchFragment"
             app:destination="@id/assetSearchFragment"
@@ -372,7 +371,19 @@
         android:id="@+id/accountsFragment"
         android:name="io.novafoundation.nova.feature_account_impl.presentation.account.management.WalletManagmentFragment"
         android:label="AccountsFragment"
-        tools:layout="@layout/fragment_accounts" />
+        tools:layout="@layout/fragment_accounts">
+
+        <action
+            android:id="@+id/action_walletManagment_to_welcome"
+            app:destination="@id/onboarding_nav_graph"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit"
+            app:popUpTo="@id/mainFragment"
+            app:popUpToInclusive="true" />
+
+    </fragment>
 
     <dialog
         android:id="@+id/switchWalletFragment"
