--- a/feature-staking-impl/src/main/res/layout/fragment_recommended_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_recommended_validators.xml
@@ -57,17 +57,17 @@
         android:id="@+id/recommendedValidatorsContent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="gone"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:visibility="gone">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recommendedValidatorsList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="6dp"
+            android:clipToPadding="false"
             android:orientation="vertical"
             android:paddingBottom="80dp"
-            android:clipToPadding="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="15"
             tools:listitem="@layout/item_validator" />
@@ -77,8 +77,8 @@
             style="@style/Widget.Nova.Button.Primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_gravity="bottom"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
